04_alb/vpc.tf
provider "aws" {
  region = "ap-northeast-1"
}

resource "aws_vpc" "main_vpc" {
  cidr_block           = "10.0.0.0/16"

  tags = {
    Name = "main-vpc"
  }
}
